2005-08-30  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal):
	Liberalize the ServerVendor check so that we can handle
	the Mandriva vendor string. (#4298, Frederic Crozat)

2005-08-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-pattern.c (_cairo_pattern_acquire_surface_for_gradient): 
	Use a 8xN rather than a 1xN strip for a vertical gradient. This
	is much more tolerant of slow compositing code, and is worth some
	extra expense computing the gradient. (#4263, found in test case
	from Richard Stellingwerff)

2005-08-27  Owen Taylor  <otaylor@redhat.com>

	reviewed by: cworth

	* src/cairo-traps.c (_cairo_traps_extract_region): Make the 
	check for rectangular trapezoids simpler and more accurate.
	(#4220, found using test case from Richard Stellingwerff)
	
2005-08-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-xlib-surface.c (_cairo_xlib_surface_create_internal): 
	Make the vendor string check for XFree86 more liberal, to deal
	with older versions of gentoo that modified it in a different
	way. (#4231, fix from Billy Biggs)

2005-08-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairoint.h: Undef MIN/MAX before defining them in case
	some system header happens to define them. (#4196, Christian
	Biesinger)

2005-08-27  Owen Taylor  <otaylor@redhat.com>

	* src/cairo-image-surface.c (cairo_image_surface_create)
	(cairo_image_surface_create_for_data): Fix docs not to talk about
	%NULL returns. (#4271, Duncan Coutts.)

2005-08-25  Tor Lillqvist  <tml@novell.com>

	* Makefile.am (developer_zip_file): Include the documentation, too.

2005-08-24  Billy Biggs  <vektor@dumbterm.net>

	* doc/public/tmpl/cairo-font-options.sgml:
	* doc/public/tmpl/cairo-font.sgml:
	* doc/public/tmpl/cairo-ft.sgml:
	* doc/public/tmpl/cairo-glitz.sgml:
	* doc/public/tmpl/cairo-image.sgml:
	* doc/public/tmpl/cairo-matrix.sgml:
	* doc/public/tmpl/cairo-paths.sgml:
	* doc/public/tmpl/cairo-pattern.sgml: