@@ -4,6 +4,7 @@ Makefile
 Makefile.in
 a8-mask
 caps-sub-paths
+clip-all
 clip-nesting
 clip-operator
 clip-twice
